# Sainsmart_control

./: README.md
acciona_motor/python/: nodo_accion.py  nodo_simple.py
nodos_ik/scripts/: Funciones_FkIk.py  publicaIk.py
sainsmart_robot_description_pkg/launch/: view_demo.launch
sainsmart_robot_description_pkg/urdf/: myrobot.xacro
servo/: servo.ino
sm_6dof/: CMakeLists.txt  package.xml
sm_6dof/launch/: sm_control.launch  sm_gazebo.launch
sm_6dof/yaml/: sm_control.yaml
src/: pos_exec.py
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/config/: real_controllers.yaml
src/arm_bringup/launch/: main_real.launch  main_sim.launch  real_bringup.launch  sim_bringup.launch
src/arm_description/urdf/robots/generic_arm/: configuration.urdf.xacro
src/arm_viz/: CMakeLists.txt
src/generic_driver/generic_hardware_interface/include/generic_hardware_interface/: generic_hw_interface.h
src/generic_driver/generic_hardware_interface/src/: generic_hw_interface.cpp  generic_hw_interface_node.cpp
src/generic_driver/generic_robot_driver/include/generic_robot_driver/: generic_robot_driver.h
src/generic_driver/generic_robot_driver/src/: generic_robot_driver.cpp
src/pwm_test_pub/nodes/: pwm_test_python_pub_node.py
src/pwm_test_pub/src/: pwm_test_cpp_pub.cpp
vision_trabajo/include/: VisionTrabajo.py
vision_trabajo/src/: VisionTrabajo.py  nodo_percepcion.py
